redesign of chatbot for Opsys

--- a/Cognitive-node-chatbot/env.sample
+++ b/Cognitive-node-chatbot/env.sample
@@ -2,23 +2,23 @@
 # Rename this file to .env before starting the app.
 
 # Watson conversation
-CONVERSATION_USERNAME="bfc3463f-72d4-438a-87f6-45fcab674a15"
-CONVERSATION_PASSWORD="a5W7KnzUDTUM"
-WORKSPACE_ID="2fbd928a-57e9-4de5-b93b-e36cb5d995c6"
+CONVERSATION_USERNAME="2d733a4e-70a5-4290-ac59-7feb825eab5a"
+CONVERSATION_PASSWORD="Zdq2hOZC4vjC"
+WORKSPACE_ID="b987eb1b-532d-4288-9031-68b04d0c66b3"
 
 # Watson Discovery
-DISCOVERY_USERNAME="b52bf039-86bf-413b-8dcd-aa7b0f5bfe84"
-DISCOVERY_PASSWORD="hx5j0hXRXrfl"
-DISCOVERY_ENVIRONMENT_ID="6c08eac0-c96e-4997-a3d3-c94a8657406a"
-DISCOVERY_COLLECTION_ID="84f57151-a0c8-42a6-8a29-608cfd871fd8"
+DISCOVERY_USERNAME="4bbe6406-8af3-470f-aa95-3161d232c6dd"
+DISCOVERY_PASSWORD="amMkFhurHBIx"
+DISCOVERY_ENVIRONMENT_ID="64681a30-0886-47d6-9210-d9427d75fe22"
+DISCOVERY_COLLECTION_ID="45848aa1-7f10-48fd-b5f8-b74143b2c4c3"
 
 # Watson Natural Language Understanding
-NATURAL_LANGUAGE_UNDERSTANDING_USERNAME="36e29046-7f95-43c9-9e65-d0d9569eba63"
-NATURAL_LANGUAGE_UNDERSTANDING_PASSWORD="4GOlgurumNZb"
+NATURAL_LANGUAGE_UNDERSTANDING_USERNAME="4fd1e09e-dd5d-4b6c-bb33-37a546f0a1b0"
+NATURAL_LANGUAGE_UNDERSTANDING_PASSWORD="SKYPwFhFUYqX"
 
 # Watson Tone Analyzer
-TONE_ANALYZER_USERNAME="34ce26c1-abed-4c17-9d69-7aa6bca63d2d"
-TONE_ANALYZER_PASSWORD="Tcsh1oiJtaCi"
+TONE_ANALYZER_USERNAME="768585d4-8bf4-4c8f-a9cb-f95655071c86"
+TONE_ANALYZER_PASSWORD="o6XhvX4jFkCp"
 
 # Run locally on a non-default port (default is 3000)
 # PORT=3000
